generalized a bit, so that BFGS call can use functions other then Rosenbrock

--- a/BFGS_LBFGS.ipynb
+++ b/BFGS_LBFGS.ipynb
@@ -13,38 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function rosenbrock_BFGS( Θ, ITERS )\n",
-    "    \n",
-    "    DIM = length(Θ)\n",
-    "    Q = Matrix(1.0I, DIM, DIM)\n",
-    "    arguments = zeros(DIM, ITERS)\n",
-    "    values = []\n",
-    "    \n",
-    "    for i in 1:ITERS\n",
-    "        \n",
-    "        # History\n",
-    "        arguments[1,i] = round( Θ[1], digits=8 )\n",
-    "        arguments[2,i] = round( Θ[2], digits=8 )\n",
-    "        push!(values, round(rosenbrock(Θ), digits=8))\n",
-    "        \n",
-    "        # Finding new weights and update\n",
-    "        Θ, Q = BFGS( Θ, Q )\n",
-    "    \n",
-    "    end\n",
-    "    return arguments, values, Q\n",
-    "end;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function BFGS( Θ, Q ) # author: Bartosz Chaber\n",
-    "    \n",
-    "    f = rosenbrock\n",
-    "    ∇f = rosenbrock_gradient\n",
+    "function BFGS( f, ∇f, Θ, Q ) # author: Bartosz Chaber\n",
+    "\n",
     "    g = ∇f(Θ)\n",
     "    \n",
     "    # Looking for the best step size\n",
@@ -71,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,60 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "rosenbrock_LBFGS (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "function rosenbrock_LBFGS( Θ, ITERS, m )\n",
-    "    DIM = length(Θ)\n",
-    "    δs, γs, qs = [], [], []\n",
-    "    arguments = zeros(DIM, ITERS)\n",
-    "    values = []\n",
-    "    \n",
-    "    for i in 1:ITERS\n",
-    "        # History\n",
-    "        arguments[1,i] = round( Θ[1], digits=8 )\n",
-    "        arguments[2,i] = round( Θ[2], digits=8 )\n",
-    "        push!(values, round(rosenbrock(Θ), digits=8))\n",
-    "        \n",
-    "        # Finding new weights and update\n",
-    "        Θ, δs, γs, qs = LBFGS(Θ, m, δs, γs, qs)    \n",
-    "    end\n",
-    "    return arguments, values, δs, γs, qs\n",
-    "end;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LBFGS (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function LBFGS(θ, m, δs, γs, qs) # author: Bartosz Chaber\n",
-    "    f = rosenbrock\n",
-    "    ∇f = rosenbrock_gradient\n",
+    "function LBFGS(f, ∇f, θ, m, δs, γs, qs) # author: Bartosz Chaber\n",
     "\n",
     "    n, g = length(δs), ∇f(θ)\n",
     "    d = -g\n",
