BFGS for LogRegNN (it was rough but now it's working)

--- a/Iris_Binary.ipynb
+++ b/Iris_Binary.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function normalize( D )\n",
+    "function normalize_iris( D )\n",
     "    min = minimum(D)\n",
     "    max = maximum(D)\n",
     "    diff = max-min\n",
@@ -34,8 +34,8 @@
     "    df = dataset(\"datasets\", \"iris\")\n",
     "    df = df[ df[:, :Species] .!= \"virginica\", : ]\n",
     "    X = zeros(100, 2);\n",
-    "    X[:,1] = normalize(df[:,1]);\n",
-    "    X[:,2] = normalize(df[:,2]);\n",
+    "    X[:,1] = normalize_iris(df[:,1]);\n",
+    "    X[:,2] = normalize_iris(df[:,2]);\n",
     "    Y = (df[:, 5] .== \"setosa\");\n",
     "    return X, Y\n",
     "end;"
