--- a/LogRegNN.ipynb
+++ b/LogRegNN.ipynb
@@ -13,6 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "using LinearAlgebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\" Parameters \"\"\"\n",
     "# α = 0.001; ITERS = 250; λ = 0.005;\n",
     "# range = -0.01:0.001:0.01\n",
@@ -25,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function train_LogRegNN( W1, b1, W2, b2, ITERS, α, λ, Y )\n",
+    "function train_LogRegNN_GD( W1, b1, W2, b2, ITERS, α, λ, Y )\n",
     "    \n",
     "    loss_acc = zeros(ITERS) # Loss per iteration\n",
     "    W2_acc = zeros(2, ITERS) # History of weights changes\n",
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,13 +196,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions for BFGS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function BFGS() ..."
+    "# Function to minimize. Input: flat vector, Output: number\n",
+    "function forward_loss( flat )\n",
+    "    W2, W1, b2, b1 = roughen( flat )\n",
+    "    A1, A2 = forward( X, W1, b1, W2, b2 )\n",
+    "    Ŷ = A2\n",
+    "    return loss_function( Y, Ŷ )\n",
+    "end;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function round_weights( flat )\n",
+    "    return [round(v, digits=8) for v in flat]\n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function flatten( weights_list ) # Dict() to 1D Array\n",
+    "    line = []\n",
+    "    for v in weights_list\n",
+    "        line = [ line...; (v...)... ]\n",
+    "    end\n",
+    "    return round_weights( line )\n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function roughen( flat ) # hard-coded counterpart of flatten\n",
+    "    W2 = reshape([flat[1] ; flat[2] ], (2,1))\n",
+    "    W1 = [ flat[3] flat[5]; flat[4] flat[6] ]\n",
+    "    b1 = [ flat[8] flat[9] ]\n",
+    "    b2 = flat[7]\n",
+    "    return W2, W1, b2, b1\n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function forward_loss_gradient( Θ )\n",
+    "    W2, W1, b2, b1 = roughen( Θ )\n",
+    "    A1, A2 = forward( X, W1, b1, W2, b2 )\n",
+    "    grad = [backprop( A1, A2, W2, Y )]\n",
+    "    return flatten(grad)\n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function train_LogRegNN_BFGS( weights, ITERS )\n",
+    "    \n",
+    "    # HIDDEN_SIZE = 2 => DIM = 9\n",
+    "    DIM = HIDDEN_SIZE * 2 + HIDDEN_SIZE + HIDDEN_SIZE + 1\n",
+    "    Q = Matrix(1.0I, DIM, DIM)    \n",
+    "    losses = zeros(1, ITERS)\n",
+    "    \n",
+    "    for i in 1:ITERS\n",
+    "        println(\"\\n==== Iteration \", i, \" ====\")\n",
+    "        \n",
+    "        # Forward pass\n",
+    "        W1, W2 = weights[\"W1\"][end], weights[\"W2\"][end]\n",
+    "        b1, b2 = weights[\"b1\"][end], weights[\"b2\"][end]\n",
+    "        A1, A2 = forward( X, W1, b1, W2, b2 )\n",
+    "        Ŷ = A2\n",
+    "        losses[i] = loss_function( Y, Ŷ )\n",
+    "        \n",
+    "        # Flattening\n",
+    "        Θ = flatten( [W2, W1, b2, b1] )\n",
+    "        ∇f = forward_loss_gradient\n",
+    "\n",
+    "        # Optimizing using BFGS\n",
+    "        new_flat, Q = BFGS( forward_loss, ∇f, Θ, Q )\n",
+    "        new_Θ = roughen( round_weights(new_flat) )\n",
+    "        \n",
+    "        println( \"Iteration \", i, \" finished. Weights:\" )\n",
+    "        for (key, new_value) in zip( keys(weights), new_Θ ) \n",
+    "            println( key, \" \", new_value )\n",
+    "            push!( weights[ key ], new_value )\n",
+    "        end\n",
+    "\n",
+    "    end\n",
+    "    \n",
+    "    return losses\n",
+    "    \n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
