--- a/Rosenbrock_BFGS.ipynb
+++ b/Rosenbrock_BFGS.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rosenbrock(Θ) = sum([100*(Θ[i+1]-Θ[i]^2)^2 + (1-Θ[i])^2 for i in 1:(length(Θ)-1)]);"
+    "rosenbrock(Θ ::Array{Float64}) = sum([100*(Θ[i+1]-Θ[i]^2)^2 + (1-Θ[i])^2 for i in 1:(length(Θ)-1)]);"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rosenbrock_gradient(Θ) = ForwardDiff.gradient(rosenbrock, Θ);"
+    "rosenbrock_gradient(Θ ::Array{Float64}) = ForwardDiff.gradient(rosenbrock, Θ);"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function rosenbrock_BFGS( Θ, max_iters, max_error=0 )\n",
+    "function rosenbrock_BFGS( Θ ::Array{Float64}, max_iters ::Int64, max_error ::Float64 = 0 )\n",
     "    \n",
     "    DIM = length(Θ)\n",
     "    Q = Matrix(1.0I, DIM, DIM)\n",
@@ -7194,7 +7194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function rosenbrock_LBFGS( Θ, m, max_iters, max_error=0 )\n",
+    "function rosenbrock_LBFGS( Θ :: Array{Float64}, m : Int64, max_iters, max_error=0 )\n",
     "    DIM = length(Θ)\n",
     "    δs, γs, qs = [], [], []\n",
     "    arguments = zeros(DIM, max_iters)\n",
