--- a/Rosenbrock_Performance.ipynb
+++ b/Rosenbrock_Performance.ipynb
@@ -6,66 +6,58 @@
     "scrolled": true
    },
    "source": [
-    "### Preparation"
+    "# Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 212,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.35903187, 0.88508975, 0.71357297, 0.5682926, 0.39783956, 0.28681072, 0.2446889, 0.00662869, 0.00630391, 0.00145395]\n",
-      "[40.6137926, 4.62894776, 4.62403037, 3.90296864, 3.59653136, 1.41797659, 1.3939231, 1.1102141, 0.81889474, 0.64550908]\n",
-      "function value in iteration 1 for x=[-58.21493943098327, 44.765612379044214] is 1.1183799402817593e9\n",
-      "function value in iteration 2 for x=[7.78733361641749e7, 668887.4777271803] is 3.6775206711858544e33\n",
-      "function value in iteration 3 for x=[-1.8889755352658453e26, 1.2128512969346094e18] is 1.2732255147981023e107\n",
-      "function value in iteration 4 for x=[2.6961185913271544e81, 7.136457145665774e54] is Inf\n",
-      "function value in iteration 5 for x=[-7.839294225219906e246, 1.4538110916999838e165] is Inf\n",
-      "function value in iteration 5666 for x=[0.9968403531725719, 0.9936780220224787] is 9.999415112942938e-6\n",
-      "function value in iteration 1 for x=[0.09273646170588251, 0.008571907510431576] is 0.823127207125418\n",
-      "function value in iteration 2 for x=[0.9949218117077823, 0.17593100565384537] is 66.24959862479201\n",
-      "function value in iteration 3 for x=[0.9949528164100685, 0.9899311059210357] is 2.5474062190566265e-5\n",
-      "function value in iteration 4 for x=[0.9999999990296372, 0.999974524006879] is 6.489273454525488e-8\n",
+      "[19.91477155, 0.06956248, 0.0669018, 0.03908957, 0.01534347, 0.00551095, 0.00269375, 0.0004362, 3.463e-5, 3.3e-7]\n",
+      "[6.3274252, 0.22158139, 0.20125658, 0.1405162, 0.08145223, 0.04680074, 0.03311067, 0.01185387, 0.00446461, 0.00148593]\n",
+      "function value in iteration 1 for x=[13.501753999316922, -190.87813479251096] is 1.3926151364185793e7\n",
+      "function value in iteration 2 for x=[-2.0154209991730647e6, 74444.22103532378] is 1.6499208136288062e27\n",
+      "function value in iteration 3 for x=[3.274592940223273e21, 8.123843459671509e14] is 1.1498184808922469e88\n",
+      "function value in iteration 4 for x=[-1.4045330236543517e67, 2.1445917848320198e45] is 3.8915966377182745e270\n",
+      "function value in iteration 5 for x=[1.108296230043211e204, 3.945426029071271e136] is Inf\n",
+      "function value in iteration 5175 for x=[0.9968426609340175, 0.9936826322371464] is 9.98481353946191e-6\n",
+      "function value in iteration 1 for x=[0.17071072711366356, 0.02906039695181256] is 0.6877213665188894\n",
+      "function value in iteration 2 for x=[0.9866583747598555, 0.3077241847844053] is 44.32522234781965\n",
+      "function value in iteration 3 for x=[0.9867578247503751, 0.9736909948157912] is 0.00017535520535156006\n",
+      "function value in iteration 4 for x=[0.9999999738062333, 0.9998245931008496] is 3.0749204751526936e-6\n",
       "function value in iteration 1 for x=[2.0, 2.0, 0.0, 0.0] is 2403.0\n",
       "function value in iteration 2 for x=[-1600.0, -1200.0, 0.0, 0.0] is 7.009447403851203e15\n",
       "function value in iteration 3 for x=[1.639168001602e12, 6.93056241202e11, 0.0, 0.0] is 5.950592759290638e53\n",
       "function value in iteration 4 for x=[-1.7616936705912477e39, -1.3315743716473421e38, 0.0, 0.0] is 5.373886071432001e167\n",
       "function value in iteration 5 for x=[2.187012037085861e120, 9.444006446884544e116, 0.0, 0.0] is Inf\n",
       "function value in iteration 9893 for x=[0.9993129371624921, 0.9986237607279519, 0.0, 0.0] is 9.990977777189374e-6\n",
-      "function value in iteration 1 for x=[0.4708338851413991, 0.0621733230680957, 0.0, 0.0] is 23.121833437817873\n",
-      "function value in iteration 2 for x=[-8.20646042545319, -10.986944295545767, 0.0, 0.0] is 2.087475931743419e6\n",
-      "function value in iteration 3 for x=[-5.304756830223305, -7.973161645118605, 0.0, 0.0] is 2.893733773040041e7\n",
-      "function value in iteration 4 for x=[-3.3452155401741237, -5.98536149432956, 0.0, 0.0] is 47882.42702981656\n",
-      "function value in iteration 5 for x=[-1.9268441341400346, -5.5772258294282, 0.0, 0.0] is 456933.10618368565\n",
-      "function value in iteration 6 for x=[-0.8649833169070877, -5.494095691815119, 0.0, 0.0] is 4840.839829032838\n",
-      "function value in iteration 7 for x=[-0.9926404931284104, 1.901815802376051, 0.0, 0.0] is 4.347094600706308e9\n",
-      "function value in iteration 8 for x=[-0.2647378561950139, 0.21866913279540423, 0.0, 0.0] is 258759.2094648015\n",
-      "function value in iteration 9 for x=[6.564349516380654, 0.18195490332270162, 0.0, 0.0] is 6.556335944020072e8\n",
-      "function value in iteration 10 for x=[5.956326568520486, 31.13748790182279, 0.0, 0.0] is 9.399602684900524e7\n",
-      "function value in iteration 11 for x=[5.588762998274168, 30.835179582576437, 0.0, 0.0] is 7.849520321730512e13\n",
-      "function value in iteration 12 for x=[5.539285667477964, 30.681765617588198, 0.0, 0.0] is 885075.0601815376\n",
-      "function value in iteration 13 for x=[4.160161111627609, 15.407330385544316, 0.0, 0.0] is 7.716781463958492e13\n",
-      "function value in iteration 14 for x=[3.364971140774748, 10.330446959133052, 0.0, 0.0] is 1.0543359714790366e6\n",
-      "function value in iteration 15 for x=[3.2084861364345656, 10.227018081785358, 0.0, 0.0] is 9.804899507992628e9\n",
-      "function value in iteration 16 for x=[3.1896264210942835, 10.176377281987634, 0.0, 0.0] is 10606.651605987387\n",
-      "function value in iteration 17 for x=[2.399174713828831, 5.134078069274308, 0.0, 0.0] is 1.1090391133119726e10\n",
-      "function value in iteration 18 for x=[1.9456492668659124, 3.464264736061562, 0.0, 0.0] is 12263.16508292826\n",
-      "function value in iteration 19 for x=[1.8575418720842591, 3.430353404094433, 0.0, 0.0] is 1.3229897873095272e6\n",
-      "function value in iteration 20 for x=[1.8471690637706955, 3.4140940163361995, 0.0, 0.0] is 120.16326781294508\n",
-      "function value in iteration 21 for x=[1.4134355628432178, 1.8112782641592007, 0.0, 0.0] is 1.435452103257742e6\n",
-      "function value in iteration 22 for x=[1.1787882763038515, 1.3041500469279912, 0.0, 0.0] is 97.60064880786105\n",
-      "function value in iteration 23 for x=[1.139590986848725, 1.2948838224078274, 0.0, 0.0] is 82.80673686350681\n",
-      "function value in iteration 24 for x=[1.1355549360152857, 1.290050074644444, 0.0, 0.0] is 0.5456274324446396\n",
-      "function value in iteration 25 for x=[1.0160607341570618, 1.0182307301209947, 0.0, 0.0] is 24.878469231478803\n",
-      "function value in iteration 26 for x=[0.9928889953698372, 0.9849339672714903, 0.0, 0.0] is 0.002905920324809314\n",
-      "function value in iteration 27 for x=[0.9990293690036008, 0.9980226204877053, 0.0, 0.0] is 9.997540602943211e-5\n",
-      "function value in iteration 28 for x=[0.9998773385216023, 0.9997533905894546, 0.0, 0.0] is 3.4184427797132926e-7\n"
+      "function value in iteration 1 for x=[0.0026118412502863578, 0.29387954166421154, 0.0, 0.0] is 22.00926096369975\n",
+      "function value in iteration 2 for x=[-0.012227310534645802, -0.2682013294258783, 0.0, 0.0] is 21.612673450641807\n",
+      "function value in iteration 3 for x=[0.008851386667326686, -0.05767562045423846, 0.0, 0.0] is 3.943445096681778\n",
+      "function value in iteration 4 for x=[0.08801166996391761, 0.0028217281964022164, 0.0, 0.0] is 2.821963010435195\n",
+      "function value in iteration 5 for x=[0.6382246075635436, 0.11482854825010852, 0.0, 0.0] is 10.449997727845705\n",
+      "function value in iteration 6 for x=[0.6571034385681543, 0.4373944668959155, 0.0, 0.0] is 2.162137501979518\n",
+      "function value in iteration 7 for x=[0.7121361307688965, 0.5014490703904612, 0.0, 0.0] is 0.9530571941397934\n",
+      "function value in iteration 8 for x=[0.842493413923059, 0.6927375977390167, 0.0, 0.0] is 0.7461110370080177\n",
+      "function value in iteration 9 for x=[0.8503174112716746, 0.7222485627366425, 0.0, 0.0] is 0.33448358341476264\n",
+      "function value in iteration 10 for x=[0.9453593566720141, 0.8844384735260745, 0.0, 0.0] is 0.46410554606635684\n",
+      "function value in iteration 11 for x=[0.9409699621761402, 0.8850499712299077, 0.0, 0.0] is 0.06415011912663181\n",
+      "function value in iteration 12 for x=[0.9963421677936561, 0.9896342353636869, 0.0, 0.0] is 0.1336104724374101\n",
+      "function value in iteration 13 for x=[0.9934749706475083, 0.986942735713508, 0.0, 0.0] is 0.0008944727939143241\n",
+      "function value in iteration 14 for x=[0.9999886517906257, 0.9999351449453964, 0.0, 0.0] is 4.7178917562290296e-5\n",
+      "function value in iteration 15 for x=[0.9999930580833725, 0.9999860816713088, 0.0, 0.0] is 1.0225899286414462e-9\n"
      ]
     }
    ],
@@ -79,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +80,7 @@
        "rosenbrock_performance (generic function with 2 methods)"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,13 +103,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adapters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lbfgs (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gd(x, max_iters, max_error) = rosenbrock_gradient_descent(x, rate, max_iters, max_error)\n",
+    "lbfgs(x, max_iters, max_error) = rosenbrock_LBFGS(x, m, max_iters, max_error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mean performance of 100 runs for 2 dimens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLES = 10;\n",
-    "DIMENS = 3;\n",
+    "SAMPLES = 100;\n",
+    "DIMENS = 2;\n",
     "ITERS = 10000;\n",
     "ERROR = 10e-6;\n",
     "\n",
@@ -134,22 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000.0, 0.6086631932049913, 0.0198483748, 1.11247479e7)"
+       "(5373.44, 9.991714084738992e-6, 0.006011725880000001, 4.66000704e6)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gd(x, max_iters, max_error) = rosenbrock_gradient_descent(x, rate, max_iters, max_error)\n",
     "rosenbrock_performance(gd, SAMPLES, DIMENS, ITERS, ERROR)"
    ]
   },
@@ -157,21 +183,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Newtons' Method performance"
+    "### Newton's Method performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9.5, 4.102236698561272e-7, 0.0722284525, 1.43692278e7)"
+       "(4.18, 1.1906558255356876e-6, 0.00026203402, 255100.96)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,16 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(15.3, 3.273e-6, 0.0062869816, 1.1553466e6)"
+       "(10.11, 2.4392e-6, 0.00093020877, 495672.58)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,24 +242,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(18.7, 3.5139999999999997e-6, 0.0056819626, 1.1381331e6)"
+       "(10.51, 2.5800999999999997e-6, 0.0006146762, 490205.44)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lbfgs(x, max_iters, max_error) = rosenbrock_LBFGS(x, m, max_iters, max_error)\n",
     "rosenbrock_performance(lbfgs, SAMPLES, DIMENS, ITERS, ERROR)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mean performance of 100 runs for 4 dimens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIMENS = 4;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000.0, 1.7682356558224654, 0.01386293305, 1.1592096e7)"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rosenbrock_performance(gd, SAMPLES, DIMENS, ITERS, ERROR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Newton's Method performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1710.08, 0.6295164370112346, 0.00830089069, 1.213725888e7)"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rosenbrock_performance(rosenbrock_newton, SAMPLES, DIMENS, ITERS, ERROR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BFGS performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20.37, 2.5608e-6, 0.00070068644, 908448.48)"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rosenbrock_performance(rosenbrock_BFGS, SAMPLES, DIMENS, ITERS, ERROR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L-BFGS performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23.85, 2.7256000000000002e-6, 0.00110630277, 1.06946208e6)"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rosenbrock_performance(lbfgs, SAMPLES, DIMENS, ITERS, ERROR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization of Rosenbrock value change for 2 dimens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization of Rosenbrock value change for 4 dimens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
