--- a/LogRegNN.ipynb
+++ b/LogRegNN.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function train_LogRegNN_GD( W1, b1, W2, b2, ITERS, α, λ, Y )\n",
+    "function train_LogRegNN_GD( W1, b1, W2, b2, ITERS, α, λ, Y; max_error=0 )\n",
     "    \n",
     "    loss_acc = zeros(ITERS) # Loss per iteration\n",
     "    W2_acc = zeros(2, ITERS) # History of weights changes\n",
@@ -54,6 +54,11 @@
     "        reg_loss = regularization_loss( W1, W2, λ )\n",
     "        loss_acc[i] = data_loss + reg_loss\n",
     "        \n",
+    "        if loss_acc[i] < max_error\n",
+    "            # println( \"GD stopped after $i iteration\" )\n",
+    "            return loss_acc, Int.(round.(Ŷ)), W1, b1, W2, b2, W2_acc, i\n",
+    "        end\n",
+    "        \n",
     "        new_W1, new_b1, new_W2, new_b2 = gradient_descent(\n",
     "            A1, A2, W1, b1, W2, b2, α, λ, Y\n",
     "        )\n",
@@ -61,7 +66,7 @@
     "    end\n",
     "    \n",
     "    pred_class = Int.(round.(Ŷ))\n",
-    "    return loss_acc, pred_class, W1, b1, W2, b2, W2_acc\n",
+    "    return loss_acc, pred_class, W1, b1, W2, b2, W2_acc, ITERS\n",
     "end;"
    ]
   },
@@ -274,19 +279,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function limit_weights( new_Θ, Θ )\n",
+    "#     min_weight_value = 10e-4\n",
+    "#     for i in 1:length(Θ)\n",
+    "#         if (new_Θ[i] < min_weight_value) new_Θ[i] = Θ[i] end\n",
+    "#     end\n",
+    "#     return round_weights( new_Θ )\n",
+    "# end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function train_LogRegNN_BFGS( weights, ITERS )\n",
+    "function train_LogRegNN_BFGS( weights, ITERS; max_error=0, v=true )\n",
     "    \n",
-    "    # HIDDEN_SIZE = 2 => DIM = 9\n",
+    "    # DIM = 9\n",
     "    DIM = HIDDEN_SIZE * 2 + HIDDEN_SIZE + HIDDEN_SIZE + 1\n",
     "    Q = Matrix(1.0I, DIM, DIM)    \n",
     "    losses = zeros(1, ITERS)\n",
     "    \n",
     "    for i in 1:ITERS\n",
-    "        println(\"\\n==== Iteration \", i, \" ====\")\n",
+    "        if v==true println(\"\\n==== Iteration \", i, \" ====\") end\n",
     "        \n",
     "        # Forward pass\n",
     "        W1, W2 = weights[\"W1\"][end], weights[\"W2\"][end]\n",
@@ -295,23 +315,76 @@
     "        Ŷ = A2\n",
     "        losses[i] = loss_function( Y, Ŷ )\n",
     "        \n",
+    "        if losses[i] < max_error\n",
+    "            # println( \"BFGS stopped after $i iteration\" )\n",
+    "            return losses, i\n",
+    "        end\n",
+    "        \n",
     "        # Flattening\n",
     "        Θ = flatten( [W2, W1, b2, b1] )\n",
     "        ∇f = forward_loss_gradient\n",
     "\n",
     "        # Optimizing using BFGS\n",
     "        new_flat, Q = BFGS( forward_loss, ∇f, Θ, Q )\n",
-    "        new_Θ = roughen( round_weights(new_flat) )\n",
+    "        if v==true println(Q) end\n",
+    "        # new_weights = roughen( limit_weights(new_flat, Θ) )\n",
+    "        new_weights = roughen( round_weights(new_flat) )\n",
     "        \n",
-    "        println( \"Iteration \", i, \" finished. Weights:\" )\n",
-    "        for (key, new_value) in zip( keys(weights), new_Θ ) \n",
-    "            println( key, \" \", new_value )\n",
-    "            push!( weights[ key ], new_value )\n",
+    "        if v==true println( \"Iteration \", i, \" finished. Weights:\" ) end\n",
+    "        for (key, new_value) in zip( keys(weights), new_weights ) \n",
+    "            if v==true println( key, \" \", new_value ) end\n",
+    "            push!( weights[ key ], new_value )            \n",
     "        end\n",
     "\n",
     "    end\n",
     "    \n",
-    "    return losses\n",
+    "    return losses, ITERS\n",
+    "    \n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function train_LogRegNN_LBFGS( weights, ITERS, m; max_error=0, v=true )\n",
+    "    \n",
+    "    # DIM = 9\n",
+    "    DIM = HIDDEN_SIZE * 2 + HIDDEN_SIZE + HIDDEN_SIZE + 1 \n",
+    "    losses = zeros(1, ITERS)\n",
+    "    δs, γs, qs = [], [], []\n",
+    "    \n",
+    "    for i in 1:ITERS\n",
+    "        if v==true println(\"\\n==== Iteration \", i, \" ====\") end\n",
+    "        \n",
+    "        # Forward pass\n",
+    "        W1, W2 = weights[\"W1\"][end], weights[\"W2\"][end]\n",
+    "        b1, b2 = weights[\"b1\"][end], weights[\"b2\"][end]\n",
+    "        A1, A2 = forward( X, W1, b1, W2, b2 )\n",
+    "        Ŷ = A2\n",
+    "        losses[i] = loss_function( Y, Ŷ )\n",
+    "        \n",
+    "        if losses[i] < max_error return losses, i end\n",
+    "        \n",
+    "        # Flattening\n",
+    "        Θ = flatten( [W2, W1, b2, b1] )\n",
+    "        ∇f = forward_loss_gradient\n",
+    "\n",
+    "        # Optimizing using BFGS\n",
+    "        new_flat, δs, γs, qs = LBFGS( forward_loss, ∇f, Θ, m, δs, γs, qs )\n",
+    "\n",
+    "        new_weights = roughen( round_weights(new_flat) )\n",
+    "        \n",
+    "        if v==true println( \"Iteration \", i, \" finished. Weights:\" ) end\n",
+    "        for (key, new_value) in zip( keys(weights), new_weights ) \n",
+    "            if v==true println( key, \" \", new_value ) end\n",
+    "            push!( weights[ key ], new_value )            \n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "    return losses, ITERS\n",
     "    \n",
     "end;"
    ]
