--- a/LogRegNN_GD.ipynb
+++ b/LogRegNN_GD.ipynb
@@ -4623,7 +4623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_history, pred_class, W1, b1, W2, b2, W2_history = train_LogRegNN_GD(\n",
+    "loss_history, pred_class, W1, b1, W2, b2, W2_history, i = train_LogRegNN_GD(\n",
     "    W1, b1, W2, b2, ITERS, α, λ, Y\n",
     ");"
    ]
